<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:fitsSystemWindows="true"
    android:id="@+id/nested_scroll_view"
    tools:context="com.example.smile.ckcc_app.activities.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="140dp"
            android:src="@drawable/ic_rupp_logo"/>



        <EditText
            android:layout_margin="15dp"
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/colorWhite"/>

        <EditText
            android:layout_margin="15dp"
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/colorWhite"/>


        <EditText
            android:layout_margin="15dp"
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorWhite"/>

        <EditText
            android:layout_margin="15dp"
            android:id="@+id/edt_comfirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_com_pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorWhite"/>

        <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/background_button"
        android:text="@string/sign_up"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
