<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:fitsSystemWindows="true"
    android:id="@+id/nested_scroll_view"
    tools:context="com.example.smile.ckcc_app.activities.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:src="@drawable/ic_rupp_logo"/>


        <EditText
            android:layout_margin="25dp"
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/colorWhite"/>


        <EditText
            android:layout_margin="25dp"
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/background_button"
            android:text="@string/log_in"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/no_acc"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/txt_link_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>


